Fix spacing on QuillEditor

--- a/client/src/styles/NewPost.css
+++ b/client/src/styles/NewPost.css
@@ -45,6 +45,13 @@
   margin: 1rem 0 0.8rem 0;
 }
 
+.ql-editor pre {
+  background-color: #23241f;
+  color: #f8f8f2;
+  padding: 5px 10px;
+  margin: 0 10px 1rem 10px !important;
+}
+
 .new-post-btns button {
   margin: 10px 10px 10px 0;
 }
