--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -168,6 +168,7 @@
   background-color: #23241f;
   color: #f8f8f2;
   padding: 5px 10px;
+  margin: 0 10px 1rem 10px;
 }
 
 #article .ql-editor blockquote {
